Fix word wrapping on tables

--- a/src/features/feeds/components/Tables.module.css
+++ b/src/features/feeds/components/Tables.module.css
@@ -34,6 +34,7 @@
   background: var(--color-background-secondary);
   padding: 1px 5px;
   border-radius: var(--border-radius-10);
+  word-break: break-word;
 }
 .copyBtn {
   background: none;
